# dir_viz

./: .gitignore  README.md  flowchart.dot  flowcharter.py  mermaider.py  project_structure.mermaid  pyproject.toml  requirements.txt  run_tests.py  setup.py  setup_web_visualizer.py  web_visualizer.py
config/: __init__.py  mermaid.py  repository.py  visualization.py
mapper/: Cargo.toml  README.md  repo_map.drawio
mapper/src/: drawio_compress.rs  drawio_launcher.rs  drawio_layout.rs  drawio_xml.rs  main.rs  svg_script.js
repomixr/: .env.example  .gitignore  repomixr.py  repos.txt  requirements.txt
repomixr/workflow/: s1-prompt.md  s2-follow-up.md  s3-xml-parser.py
utils/: __init__.py  cli_common.py  directory_scanner.py  file_operations.py
web_visualizer/: .env.example  README.md  __init__.py  config.py  main.py  models.py  requirements.txt
web_visualizer/api/: __init__.py  dependencies.py  main.py  middleware.py  routes.py
web_visualizer/services/: __init__.py  cache_service.py  directory_service.py  export_service.py  file_service.py  websocket_service.py
web_visualizer/static/css/: style.css
web_visualizer/static/js/: api.js  app.js  particles.js  themes.js  visualizations.js
web_visualizer/templates/: index.html
web_visualizer/tests/: __init__.py  test_directory_service.py
