[project]
name = "flowcharter"
version = "0.1.0"
description = "A Python tool for creating and visualizing flowcharts and diagrams using graphviz and pydot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "pydot>=3.0.4",
    "setuptools>=80.1.0",
    "tqdm>=4.67.1",
]

[project.scripts]
flowcharter = "flowchart_gen:entry_point"
