[project]
name = "flowcharter"
version = "0.1.0"
description = "A Python tool for creating and visualizing flowcharts and diagrams using graphviz and pydot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.13",
    "graphviz>=0.20.3",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pydot>=3.0.4",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "setuptools>=80.1.0",
    "slowapi>=0.1.9",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]

[project.scripts]
flowcharter = "flowchart_gen:entry_point"
